Added markdown to predict file

--- a/friendspredict.ipynb
+++ b/friendspredict.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Our Trained ML Model to Predict Laughter\n",
+    "\n",
+    "In an earlier notebook, we trained our model to identify laughter using a training set of ~20 episodes (each episode is around ~22 mins) which is about 7 hours of training data split into 10-second increments.\n",
+    "\n",
+    "In this notebook, we load all remaining 214 episodes of friends and predict the exact time ranges of laughter for each episode. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -13,6 +24,15 @@
     "import operator\n",
     "import numpy as np\n",
     "import IPython"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deciding clip length and overlap between clips\n",
+    "\n",
+    "We use 10 second clips just like we used in training. "
    ]
   },
   {
@@ -30,7 +50,7 @@
     }
    ],
    "source": [
-    "# predtimesteps is dictated by model\n",
+    "# predtimesteps is dictated by trained model\n",
     "predtimesteps = 847\n",
     "cliplen = 10000\n",
     "lag = 0 # this will dictate overlap necessary\n",
@@ -38,6 +58,15 @@
     "timesteplen = cliplen / predtimesteps\n",
     "print(\"overlap in ms is \" + str(overlap))\n",
     "print(\"length of each timestep in ms is \" + str(timesteplen))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating 10-second clips\n",
+    "\n",
+    "We take in the preprocessed audio files from each episode (~22 mins each) and slice them into 10-second audio clips."
    ]
   },
   {
@@ -84,6 +113,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sorting the clips"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -111,6 +147,15 @@
     "\n",
     "sortedclips = sorted(listtosort, key = operator.itemgetter(0, 1, 2))\n",
     "# print(sortedclips)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shaping clips into the correct form for the model\n",
+    "\n",
+    "We take the 10-second clips and we break the clips into 861 separate timesteps and we measure 257 unique frequency levels at each timestep. Then we package the timesteps and frequencies for each clip and create a numpy array that we can feed to our model. "
    ]
   },
   {
@@ -191,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We save the numpy array of clip info locally"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -203,115 +255,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # Preprocessing Y-labels\n",
-    "# # Creating dict of laugh labels for hand-labeled episodes\n",
-    "\n",
-    "# labeldict = {}\n",
-    "# laughlabelsfolder = '/Users/Jack/Developer/friends/laughlabels/'\n",
-    "\n",
-    "# for filename in os.listdir(laughlabelsfolder):\n",
-    "#     if not filename.startswith('.'):\n",
-    "#         season = filename[0:2]\n",
-    "#         episode = filename[2:4]\n",
-    "#         labeldict[season + episode] = []\n",
-    "#         htmlpath = laughlabelsfolder + filename\n",
-    "#         with open(htmlpath) as f:\n",
-    "#             for line in f:\n",
-    "#                 if '\\\\' not in line:\n",
-    "#                     # converting to ms\n",
-    "# #                     print(season, episode)\n",
-    "# #                     print(line)\n",
-    "#                     pair = [float(i) * 1000 for i in line.split()]\n",
-    "#                     labeldict[season + episode].append(pair)\n",
-    "#                 else:\n",
-    "#                     continue\n",
-    "# print(labeldict)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Creating Y numpy array of shape (number of clips, number of predicted timesteps, 1)\n",
-    "\n",
-    "# for i, info in enumerate(sortedclips):\n",
-    "#     season = info[0]\n",
-    "#     dictseason = str(season).zfill(2)\n",
-    "#     episode = info[1]\n",
-    "#     dictepisode = str(episode).zfill(2)\n",
-    "#     begtime = info[2]\n",
-    "#     endtime = info[3]\n",
-    "#     workinglabels = labeldict[dictseason + dictepisode]\n",
-    "#     cliplabels = []\n",
-    "#     increment = (endtime - begtime) / predtimesteps\n",
-    "#     for count in range(predtimesteps): # range is from 0 to end - 1 for example\n",
-    "#         # this skips t-0 as a timestep but includes last possible timestep (t-1000 if there are 1000 timesteps)\n",
-    "#         timestep = begtime + increment + (count * increment)\n",
-    "#         timesteplabel = 0\n",
-    "#         for pair in workinglabels:\n",
-    "#             if pair[0] <= timestep <= pair[1]:\n",
-    "#                 timesteplabel = 1\n",
-    "#         cliplabels.append(timesteplabel)\n",
-    "# #     print(\"Length of cliplabels is \" + str(len(cliplabels)))\n",
-    "#     sortedclips[i].append(cliplabels)\n",
-    "# print(sortedclips)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Add lag to y-values\n",
-    "# sortedlagclips = []\n",
-    "\n",
-    "# for info in sortedclips:\n",
-    "#     beforelag = info[5]\n",
-    "#     afterlag = beforelag[:-lag or None]\n",
-    "#     pos = 0\n",
-    "#     value = 0\n",
-    "#     for i in range(lag):\n",
-    "#         afterlag.insert(pos, value)\n",
-    "#     sortedlagclips.append([info[0], info[1], info[2], info[3], info[4], afterlag])\n",
-    "# print(sortedlagclips)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create preY\n",
-    "# preYlist = []\n",
-    "\n",
-    "# for info in sortedlagclips:\n",
-    "#     labels = info[5]\n",
-    "#     preYlist.append(labels)\n",
-    "# preY = np.stack(preYlist, axis=0)\n",
-    "# preY = np.expand_dims(preY, axis=2)\n",
-    "# print(preY.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Save preY\n",
-    "# modeldatafolder = '/Users/Jack/Developer/friends/modeldata/'\n",
-    "\n",
-    "# np.save(modeldatafolder + 'preY.txt', preY)"
+    "### Removed some preprocessing for preX so now we just assign as X"
    ]
   },
   {
@@ -320,20 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X = preX\n",
-    "# y = preY\n",
-    "\n",
-    "# # splitting train (80%) and test (20%)\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# # Taking train (80%) and removing 25% to create val (20% overall) and leaves train at 60% overall\n",
-    "# X_train, X_dev, y_train, y_dev = train_test_split(X_train, y_train, test_size=0.25, random_state=1) # 0.25 x 0.8 = 0.2\n",
-    "\n",
-    "# print(\"Shape of X_train and y_train are \" + str(X_train.shape) + \", \" +  str(y_train.shape))\n",
-    "# print(\"Shape of X_dev and y_dev are \" + str(X_dev.shape) + \", \" +  str(y_dev.shape))\n",
-    "# print(\"Shape of X_test and y_test are \" + str(X_test.shape) + \", \" +  str(y_test.shape))"
+    "X = preX"
    ]
   },
   {
@@ -356,6 +290,13 @@
     "from keras.layers import GRU, Bidirectional, BatchNormalization, Reshape\n",
     "from keras.optimizers import Adam\n",
     "from keras.metrics import Precision, Recall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Redefining our CNN+GRU neural network architecture"
    ]
   },
   {
@@ -395,12 +336,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining model input shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = model(input_shape = (X.shape[1], X.shape[2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading weights from our previously trained model"
    ]
   },
   {
@@ -415,6 +370,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Adam gradient descent optimization algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -425,17 +387,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# loss, acc, prec, recall = model.evaluate(X_dev, y_dev)\n",
-    "# F1 = 2 * ((prec * recall) / (prec + recall))\n",
-    "# print(\"Dev set accuracy = \", acc)\n",
-    "# print(\"Dev set precision = \", prec)\n",
-    "# print(\"Dev set recall = \", recall)\n",
-    "# print(\"Dev set F1 = \", F1)\n"
+    "### Predicting for all clips"
    ]
   },
   {
@@ -466,6 +421,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chose an 80% confidence threshold for laughter inclusion\n",
+    "\n",
+    "Our precision score was lower than our recall score for a long time, so I decided to be more strict on what counted as laughter. We were getting almost all \"true\" laughter instances correct, but we were including some instances that were not laughter more often, so raising the threshold would correct for this. However, I think the precision and recall scores evened out in the last few versions of the model training, so I probably could have lowered this back down to ~50%. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -483,6 +447,13 @@
     "probs = rawprobs[:, :, 0]\n",
     "preds = np.where(probs > 0.8, 1, 0)\n",
     "print(preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing performance on some individual clips"
    ]
   },
   {
@@ -552,6 +523,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating dict with episode clip counts for later use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 208,
    "metadata": {},
@@ -582,6 +560,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking our clip count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 209,
    "metadata": {},
@@ -600,6 +585,13 @@
     "    totalclips += epcount\n",
     "print(\"Total clips is \" + str(totalclips) + \" and should be equal to \" + str(preds.shape[0]))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing laughter predictions for each episode"
    ]
   },
   {
@@ -662,6 +654,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving laughter predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {},
@@ -672,6 +671,17 @@
     "\n",
     "for ep, array in predsbyep.items():\n",
     "    np.save(predsbyepfolder + ep + \".txt\", array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating final laughter ranges\n",
+    "\n",
+    "There are effectively two processing steps I take here in order to make the laughter ranges even more accurate. Anything under 400 milliseconds is too short to be a standalone laughter instance, so it either needs to join together with a close-by laughter instance, or it needs to be removed. Any gap of 100ms or less between two laughter instances is much to short to be meaningful, so we combine those two laughter instances into one longer laughter instance. \n",
+    "\n",
+    "We output a dictionary where the keys are specific episodes and the values are lists that contain pairs of start/end timestamps for laughter instances. "
    ]
   },
   {
@@ -776,6 +786,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating new SQLite table to store laughter instances "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 216,
    "metadata": {},
@@ -811,6 +828,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inputting laughter instances\n",
+    "\n",
+    "We take our nicely formatted laughter ranges, organized by episode, and we store them in a SQLite database."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 217,
    "metadata": {},
@@ -830,6 +856,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding column to laughs table in SQLite so we can attribute the laugh to a character"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 218,
    "metadata": {},
@@ -846,7 +879,6 @@
     }
    ],
    "source": [
-    "# Adding column to laughs table in SQLite so we can attribute the laugh to a char\n",
     "addColumn = \"ALTER TABLE laughs ADD COLUMN char TEXT\"\n",
     "\n",
     "cur.execute(addColumn)"
