redacted plotly info

--- a/friendscombined.ipynb
+++ b/friendscombined.ipynb
@@ -62,8 +62,8 @@
    "outputs": [],
    "source": [
     "# plotly sign-in\n",
-    "username = 'jsanford9292'\n",
-    "api_key = 't5yW8S6zZWzD1NJrPqcp'"
+    "username = 'redacted'\n",
+    "api_key = 'redacted'"
    ]
   },
   {
