--- a/friendsdatabase.ipynb
+++ b/friendsdatabase.ipynb
@@ -306,7 +306,7 @@
    "source": [
     "### Preprocessing the subtitles files\n",
     "\n",
-    "The subtitles files have a very consistent format and so they are easier to parse. There are some tricky edge cases here (sometimes two characters speak in the same timeframe, sometimes one characters speaks two lines in thes same timeframe) but overall it is easier to parse than the script file. We end up with a dictionary where the keys are specific episodes and the values are a dictionary where the keys are line numbers and the values are the info from that line (start time, end time, character, line). "
+    "The subtitles files have a very consistent format and so they are easier to parse. There are some tricky edge cases here (sometimes two characters speak in the same timeframe, sometimes one character speaks two lines in the same timeframe) but overall it is easier to parse than the script file. We end up with a dictionary where the keys are specific episodes and the values are a dictionary where the keys are line numbers and the values are the info from that line (start time, end time, character, line). "
    ]
   },
   {
