--- a/friendspredict.ipynb
+++ b/friendspredict.ipynb
@@ -362,7 +362,7 @@
    "source": [
     "### Chose an 80% confidence threshold for laughter inclusion\n",
     "\n",
-    "Our precision score was lower than our recall score for a long time, so I decided to be more strict on what counted as laughter. We were getting almost all \"true\" laughter instances correct, but we were including some instances that were not laughter more often, so raising the threshold would correct for this. However, I think the precision and recall scores evened out in the last few versions of the model training, so I probably could have lowered this back down to ~50%. "
+    "Our precision score was lower than our recall score for a long time, so I decided to be more strict on what counted as laughter. We were getting almost all \"true\" laughter instances correct, but we were including some instances that were not laughter more often, so raising the threshold would correct for this. However, I think the precision and recall scores switched slightly in the last few versions of the model training, so I probably could have lowered this back down to ~50%. "
    ]
   },
   {
